dartagnan/src/test/resources/spirv/opencl/gpuverify/benign_race_tests/pass/writezero.spvasm
; @Config: 3, 1, 3
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 21
; Schema: 0
               OpCapability Addresses
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %6 "foo"
               OpSource OpenCL_C 200000
               OpDecorate %13 Alignment 4
               OpDecorate %14 Alignment 4
               OpDecorate %16 Alignment 4
               OpDecorate %17 Alignment 4
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %5 = OpTypeFunction %void %_ptr_Workgroup_uint %_ptr_Workgroup_uint %uint %uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
%_ptr_Function_uint = OpTypePointer Function %uint
          %6 = OpFunction %void DontInline %5
          %7 = OpFunctionParameter %_ptr_Workgroup_uint
          %8 = OpFunctionParameter %_ptr_Workgroup_uint
          %9 = OpFunctionParameter %uint
         %10 = OpFunctionParameter %uint
         %11 = OpLabel
         %13 = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
         %14 = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
         %16 = OpVariable %_ptr_Function_uint Function
         %17 = OpVariable %_ptr_Function_uint Function
               OpStore %13 %7 Aligned 4
               OpStore %14 %8 Aligned 4
               OpStore %16 %9 Aligned 4
               OpStore %17 %10 Aligned 4
         %18 = OpLoad %_ptr_Workgroup_uint %13 Aligned 4
         %20 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %18 %uint_0
               OpStore %20 %uint_0 Aligned 4
               OpReturn
               OpFunctionEnd
