dartagnan/src/test/resources/spirv/opencl/gpuverify/benign_race_tests/fail/writeafterread_otherval.spvasm
; @Config: 3, 1, 1
; SPIR-V
; Version: 1.0
; Generator: Khronos LLVM/SPIR-V Translator; 14
; Bound: 29
; Schema: 0
               OpCapability Addresses
               OpCapability Linkage
               OpCapability Kernel
          %1 = OpExtInstImport "OpenCL.std"
               OpMemoryModel Physical32 OpenCL
               OpEntryPoint Kernel %9 "foo" %__spirv_BuiltInLocalInvocationId
               OpSource OpenCL_C 200000
               OpName %__spirv_BuiltInLocalInvocationId "__spirv_BuiltInLocalInvocationId"
               OpDecorate %__spirv_BuiltInLocalInvocationId BuiltIn LocalInvocationId
               OpDecorate %__spirv_BuiltInLocalInvocationId Constant
               OpDecorate %__spirv_BuiltInLocalInvocationId LinkageAttributes "__spirv_BuiltInLocalInvocationId" Import
               OpDecorate %14 Alignment 4
               OpDecorate %15 Alignment 4
               OpDecorate %17 Alignment 4
       %uint = OpTypeInt 32 0
     %uint_0 = OpConstant %uint 0
     %uint_5 = OpConstant %uint 5
     %v3uint = OpTypeVector %uint 3
%_ptr_Input_v3uint = OpTypePointer Input %v3uint
       %void = OpTypeVoid
%_ptr_Workgroup_uint = OpTypePointer Workgroup %uint
          %8 = OpTypeFunction %void %_ptr_Workgroup_uint %_ptr_Workgroup_uint
%_ptr_Function__ptr_Workgroup_uint = OpTypePointer Function %_ptr_Workgroup_uint
%_ptr_Function_uint = OpTypePointer Function %uint
%__spirv_BuiltInLocalInvocationId = OpVariable %_ptr_Input_v3uint Input
          %9 = OpFunction %void DontInline %8
         %10 = OpFunctionParameter %_ptr_Workgroup_uint
         %11 = OpFunctionParameter %_ptr_Workgroup_uint
         %12 = OpLabel
         %14 = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
         %15 = OpVariable %_ptr_Function__ptr_Workgroup_uint Function
         %17 = OpVariable %_ptr_Function_uint Function
               OpStore %14 %10 Aligned 4
               OpStore %15 %11 Aligned 4
         %18 = OpLoad %_ptr_Workgroup_uint %14 Aligned 4
         %20 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %18 %uint_0
         %21 = OpLoad %uint %20 Aligned 4
         %22 = OpLoad %_ptr_Workgroup_uint %15 Aligned 4
         %23 = OpLoad %v3uint %__spirv_BuiltInLocalInvocationId Aligned 16
         %24 = OpCompositeExtract %uint %23 0
         %25 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %22 %24
               OpStore %25 %21 Aligned 4
         %26 = OpLoad %_ptr_Workgroup_uint %14 Aligned 4
         %27 = OpInBoundsPtrAccessChain %_ptr_Workgroup_uint %26 %uint_0
               OpStore %27 %uint_5 Aligned 4
               OpReturn
               OpFunctionEnd
